--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>loginservlet</servlet-name>
-        <servlet-class>com.loginservlet</servlet-class>
+        <servlet-name>loginServlet</servlet-name>
+        <servlet-class>com.loginServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>loginservlet</servlet-name>
-        <url-pattern>/loginservlet</url-pattern>
+        <servlet-name>loginServlet</servlet-name>
+        <url-pattern>/loginServlet.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
